2007-02-06  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add the application/x-ica mime-type,
	patch from Jack Johnson <knapjack@gmail.com> (Closes: #3820)

2007-02-06  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: compressed SVG files aren't XML files,
	so .svgz files now use image/svg as their mime-type (Closes: #9873)

2007-02-05  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Pino Toscano
	<toscano.pino@tiscali.it> to add a mime-type for XLIFF
	translation files (Closes: #6532)

2007-02-05  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Pino Toscano
	<toscano.pino@tiscali.it> to add a mime-type for LDIF files
	(Closes: #6482)

2007-02-05  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: application/xslt+xml is reserved for
	XSLT 2.0 style-sheets, which we cannot detect because we don't
	read attributes, just namespaces. So remove *.xsl and *.xslt as
	application/xslt+xml globs, and add those to application/xml
	(the recommended mime-type for XSLT version 1.0)
	Leave application/xslt+xml present as a sub-class of application/xml
	to avoid breaking already existing program associations
	(Closes: #2928)

2007-02-05  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Really fix my application/x-markaby
	mime-type addition, more crack (time to go home?), Patch from
	Young-Ho, Cha <ganadist@chollian.net> to add mime-types for
	Haansoft's Hangul word processor (Closes: #4230)

2007-02-05  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add mime-type including magic for ACE
	archives (Patch from Pino Toscano <toscano.pino@tiscali.it>)
	(Closes: #6473), Fix parsing from previous commit

2007-02-05  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add application/x-markaby mime-type for
	"Ruby markup"-fu (Closes: #6132)

2007-02-05  Bastien Nocera  <hadess@hadess.net>
